--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <div class="banner">
           <h1 class="text-banner">NINJA KEN<span class="kuning">.</span></h1>
           <p>MY PORTFOLIO</p>
-          <img class="img-banner" src="./images/Ninja Ken.png" alt="ninja-ken">
+          <img class="img-banner" src="Ninja Ken.png" alt="ninja-ken">
         </div>
       </section>
       <section class="about" id="about"><h1>Tentang Saya</h1>
@@ -33,9 +33,9 @@
       <section class="proyek" id="proyek">
         <h1>Proyek contoh</h1>
         <div class="contents-wrapper">
-          <div class="contents-item"><img class="img-wrapper" src="./images/1.png" alt="ninja-ken"><p>Image 1</p></div>
-          <div class="contents-item"><img class="img-wrapper" src="./images/2.png" alt="ninja-ken"><p>Image 2</p></div>
-          <div class="contents-item"><img class="img-wrapper" src="./images/3.png" alt="ninja-ken"><p>Image 3</p></div>
+          <div class="contents-item"><img class="img-wrapper" src="1.png" alt="ninja-ken"><p>Image 1</p></div>
+          <div class="contents-item"><img class="img-wrapper" src="2.png" alt="ninja-ken"><p>Image 2</p></div>
+          <div class="contents-item"><img class="img-wrapper" src="3.png" alt="ninja-ken"><p>Image 3</p></div>
         </div>
       </section>
       <section class="form" class="hubungi" id="hubungi">
